[package]
edition = "2021"
name = "swc-plugin-core-fe-hmr"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1"
swc_core = {version = "0.40.51", features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_transforms",
  "plugin_transform",
]}
swc_ecma_transforms_testing = {version = "0.114.29"}
testing = {version = "0.31.13"}

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
