[package]
edition = "2021"
name = "swc-plugin-core-fe-hmr"
version = "1.0.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = "1.0.171"
swc_core = {version = "0.90.16", features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_transforms",
  "ecma_plugin_transform",
  "testing_transform"
]}
testing = {version = "0.33.20"}

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
